--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,15 @@ name = "InteractiveGeodynamics"
 uuid = "3ccad509-8039-4f04-ad0e-35c379e37327"
 authors = ["Boris Kaus <kaus@uni-mainz.de>"]
 version = "0.1.0"
+
+[deps]
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+GeophysicalModelGenerator = "3700c31b-fa53-48a6-808a-ef22d5a84742"
+GridLayoutBase = "3955a311-db13-416c-9275-1d80ed98e5e9"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
+LaMEM = "2e889f3d-35ce-4a77-8ea2-858aecb630f7"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+
+[compat]
+julia = "1.7"
+LaMEM = "0.1.12"
