--- a/Project.toml
+++ b/Project.toml
@@ -9,8 +9,9 @@ GeophysicalModelGenerator = "3700c31b-fa53-48a6-808a-ef22d5a84742"
 GridLayoutBase = "3955a311-db13-416c-9275-1d80ed98e5e9"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LaMEM = "2e889f3d-35ce-4a77-8ea2-858aecb630f7"
-Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
 [compat]
-julia = "1.7"
+GeophysicalModelGenerator = "0.4.12"
 LaMEM = "0.1.12"
+GLMakie = "0.8.4"
+julia = "1.7"
