--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,8 @@ GridLayoutBase = "3955a311-db13-416c-9275-1d80ed98e5e9"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LaMEM = "2e889f3d-35ce-4a77-8ea2-858aecb630f7"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 GLMakie = "0.8.4"
