--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "InteractiveGeodynamics"
 uuid = "3ccad509-8039-4f04-ad0e-35c379e37327"
 authors = ["Boris Kaus <kaus@uni-mainz.de>"]
-version = "0.1.1"
+version = "0.1.2"
 
 [deps]
 Dash = "1b08a953-4be3-4667-9a23-3db579824955"
@@ -18,14 +18,14 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
 [compat]
-Dash = "1.3"
+Dash = "1.3,1.4,1.5"
 DashBootstrapComponents = "1.4.1"
 DelimitedFiles = "1.9"
 GeophysicalModelGenerator = "0.5"
-Interpolations = "0.14"
+Interpolations = "0.14, 0.15"
 LaMEM = "0.2"
 PlotlyJS = "0.18"
-Revise = "3.5.2"
+Revise = "3.5"
 Statistics = "1.9.0"
 HTTP = "1"
 julia = "1.7"
