--- a/Project.toml
+++ b/Project.toml
@@ -21,11 +21,11 @@ UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 Dash = "1.3,1.4,1.5"
 DashBootstrapComponents = "1.4.1"
 DelimitedFiles = "1.9"
-GeophysicalModelGenerator = "0.5"
+GeophysicalModelGenerator = "0.7"
 Interpolations = "0.14, 0.15"
-LaMEM = "0.2"
+LaMEM = "0.3"
 PlotlyJS = "0.18"
 Revise = "3.5"
 Statistics = "1.9.0"
 HTTP = "1"
-julia = "1.7 - 1.9"
+julia = "1.9"
