--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,20 @@
+authors = ["Boris Kaus <kaus@uni-mainz.de>"]
 name = "InteractiveGeodynamics"
 uuid = "3ccad509-8039-4f04-ad0e-35c379e37327"
-authors = ["Boris Kaus <kaus@uni-mainz.de>"]
 version = "0.2.0"
+
+[compat]
+Dash = "1.3,1.4,1.5"
+DashBootstrapComponents = "1.4.1"
+DelimitedFiles = "1.9"
+GeophysicalModelGenerator = "0.7"
+HTTP = "1"
+Interpolations = "0.14, 0.15"
+LaMEM = "0.3"
+PlotlyJS = "0.18"
+Revise = "3.5"
+Statistics = "1.9.0"
+julia = "1.9"
 
 [deps]
 Dash = "1b08a953-4be3-4667-9a23-3db579824955"
@@ -17,15 +30,5 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
-[compat]
-Dash = "1.3,1.4,1.5"
-DashBootstrapComponents = "1.4.1"
-DelimitedFiles = "1.9"
-GeophysicalModelGenerator = "0.7"
-Interpolations = "0.14, 0.15"
-LaMEM = "0.3"
-PlotlyJS = "0.18"
-Revise = "3.5"
-Statistics = "1.9.0"
-HTTP = "1"
-julia = "1.9"
+[extras]
+MPIPreferences = "3da0fdf6-3ccc-4f1b-acd9-58baa6c99267"
