--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,6 @@ GeoParams = "e018b62d-d9de-4a26-8697-af89c310ae38"
 GeophysicalModelGenerator = "3700c31b-fa53-48a6-808a-ef22d5a84742"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
-JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LaMEM = "2e889f3d-35ce-4a77-8ea2-858aecb630f7"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
@@ -23,14 +22,24 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
+[weakdeps]
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+
+[extensions]
+InteractiveGeodynamicsGLMakieExt = "GLMakie"
+
 [compat]
 Dash = "1.3,1.4,1.5"
 DashBootstrapComponents = "1.4.1"
 DelimitedFiles = "1.9"
+ForwardDiff = "0.10"
+GLMakie = "0.8, 0.9"
 HTTP = "1"
 Interpolations = "0.14, 0.15"
 PlotlyJS = "0.18"
 Revise = "3.5"
+SparseArrays = "1"
+SparseDiffTools = "2"
 Statistics = "1.9.0"
 julia = "1.9"
 
