--- a/Project.toml
+++ b/Project.toml
@@ -33,9 +33,12 @@ Dash = "1.3,1.4,1.5"
 DashBootstrapComponents = "1.4.1"
 DelimitedFiles = "1.9"
 ForwardDiff = "0.10"
+GeoParams = "0.6"
+GeophysicalModelGenerator = "0.7"
 GLMakie = "0.8, 0.9"
 HTTP = "1"
 Interpolations = "0.14, 0.15"
+LaMEM = "0.3.8"
 PlotlyJS = "0.18"
 Revise = "3.5"
 SparseArrays = "1"
