--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "InteractiveGeodynamics"
 uuid = "3ccad509-8039-4f04-ad0e-35c379e37327"
 authors = ["Boris Kaus <kaus@uni-mainz.de>"]
-version = "0.2.2"
+version = "0.2.3"
 
 [deps]
 Dash = "1b08a953-4be3-4667-9a23-3db579824955"
@@ -35,7 +35,7 @@ DelimitedFiles = "1.9"
 ForwardDiff = "0.10"
 GeoParams = "0.6"
 GeophysicalModelGenerator = "0.7"
-GLMakie = "0.8, 0.9"
+GLMakie = "0.8, 0.9, 0.10"
 HTTP = "1"
 Interpolations = "0.14, 0.15"
 LaMEM = "0.3.8"
