--- a/Project.toml
+++ b/Project.toml
@@ -38,7 +38,7 @@ GeophysicalModelGenerator = "0.7"
 GLMakie = "0.8, 0.9, 0.10"
 HTTP = "1"
 Interpolations = "0.14, 0.15"
-LaMEM = "0.3.8"
+LaMEM = "0.3, 0.4"
 PlotlyJS = "0.18"
 Revise = "3.5"
 SparseArrays = "1"
